--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.4.3",
+    "react-spinner-overlay": "^0.1.33",
     "swr": "^1.0.1"
   },
   "devDependencies": {
